--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>fina</title>
+    <title>Fontes Inediti Numismaticae Antiquae (FINA)</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alegreya:500i" rel="stylesheet">
     <link href="/static/favicon.png" rel="shortcut icon" type="image/vnd.microsoft.icon">
